# deep-rl-hf-class

./: .gitignore
notebooks/unit1/: main.py  pre_install.sh  push_model_to_hup.py  pyproject.toml  test.py  train.py
notebooks/unit2/: main.py  pyproject.toml  train_forzen_lake.py  train_taxi.py
notebooks/unit3/: eval.sh  main.py  pre-install.sh  pyproject.toml  record-vieo.sh  train.sh
notebooks/unit3/logs/dqn/SpaceInvadersNoFrameskip-v4_1/: 0.monitor.csv  evaluations.npz
notebooks/unit3/logs/dqn/SpaceInvadersNoFrameskip-v4_1/SpaceInvadersNoFrameskip-v4/: args.yml  command.txt
notebooks/unit4/: pyproject.toml  train.py  train_pixcopter.py
