[project]
name = "unit2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.1",
    "huggingface-hub>=0.35.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.3.4",
    "pygame>=2.6.1",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]
